fixes many bugs on models and fixtures

--- a/app/views/backend/product_nature_variant_indicator_data/_form.html.haml
+++ b/app/views/backend/product_nature_variant_indicator_data/_form.html.haml
@@ -1,2 +1,5 @@
 =field_set do
-  =f.input :name
+  =f.referenced_association :variant
+  =f.input :indicator
+  =f.input :created_at
+  =f.input :value
