--- a/app/views/backend/dashboards/index.html.haml
+++ b/app/views/backend/dashboards/index.html.haml
@@ -8,6 +8,7 @@
   -b.hbox do
     -b.cell :meteo do
       %img{:alt => "Météo Saint-Porchaire heure par heure", :border => "0", :src => "http://meteorologic.net/vignette-previ-1h/6026.png", :style => "max-width: 100%; margin: 0 auto; display: block"}
+    -b.cell :calendar
     -b.cell :today do
       -date = Date.today
       %span#cell-date.date
