--- a/app/views/backend/dashboards/welcome.html.haml
+++ b/app/views/backend/dashboards/welcome.html.haml
@@ -4,3 +4,10 @@
   -tabbox do
     -cell :meteo do
       %img{:alt => "météo Saint-Porchaire heure par heure", :border => "0", :src => "http://meteorologic.net/vignette-previ-1h/6026.png"}
+    -cell :today do
+      -date = Date.today
+      %span#cell-date.date
+        %span.day-name=date.l(:format => '%A')
+        %span.day=date.day
+        %span.month=date.l(:format => '%B')
+        %span.year=date.year
