add more constrast on today in calendar

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -1987,7 +1987,7 @@ svg.map {
         }
       }
       &.today {
-        background: #FFE;
+        background: #FE9;
       }
       &.not-current-month {
         > div {
