Removes frozen indic

--- a/app/views/backend/product_nature_variants/_form.html.haml
+++ b/app/views/backend/product_nature_variants/_form.html.haml
@@ -11,5 +11,5 @@
   = f.input :horizontal_rotation
 
 = field_set(:indicator) do
-  = f.input :frozen_indicators, :disabled => true
+  -# = f.input :frozen_indicators, :disabled => true
   = f.nested_association(:indicator_data)
