--- a/app/views/backend/preferences/show.html.haml
+++ b/app/views/backend/preferences/show.html.haml
@@ -1,7 +1,10 @@
-=main_toolbar do |t|
-  -t.edit @prescription
-  -t.print_entity @prescription
-  -t.destroy(@prescription, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @prescription.destroyable?
+= main_toolbar do |t|
+  - t.edit resource
 
-=attributes_list(@prescription) do |l|
-  -l.attribute :name
+- beehive do |b|
+  - b.cell do
+    = attributes_list do |l|
+      - l.attribute :name
+      - l.attribute :nature
+      - l.attribute :value
+    
