--- a/app/views/backend/event_natures/_form.html.haml
+++ b/app/views/backend/event_natures/_form.html.haml
@@ -1,4 +1,4 @@
-=field_set do
-  =f.input :name
-  =f.input :usage
-  =f.input :duration
+= field_set do
+  = f.input :name
+  = f.input :usage
+  = f.input :active
