--- a/app/views/backend/gaps/_form.html.haml
+++ b/app/views/backend/gaps/_form.html.haml
@@ -1,2 +1,5 @@
 = field_set do
-  = f.input :name
+  = f.referenced_association :entity
+  = f.input :direction
+  = f.input :amount
+  = f.input :currency
