--- a/app/views/backend/product_processes/_form.html.haml
+++ b/app/views/backend/product_processes/_form.html.haml
@@ -1,7 +1,7 @@
-=field_set do
-  =f.referenced_association :variety
-  =f.input :name
-  =f.input :nature
-  =f.input :description
-  =f.input :repeatable
+= field_set do
+  = f.input :name
+  = f.input :variety
+  = f.input :nature
+  = f.input :description
+  = f.input :repeatable
 
