--- a/app/views/backend/_beehive.html.haml
+++ b/app/views/backend/_beehive.html.haml
@@ -20,7 +20,7 @@
               - if cell.content?
                 .cell-content= cell.content
               - else
-                .cell-content{"data-cell" => url_for((cell.options[:params]||{}).merge(:controller => "backend/cells/#{cell.name}_cells", :action => :show))}
+                .cell-content{"data-cell" => url_for((cell.options[:params]||{}).merge(:controller => "backend/cells/#{cell.type}_cells", :action => :show))}
               .cell-bottom
         .cells-bottom
   .beehive-bottom
