--- a/app/views/backend/product_process_phases/show.html.haml
+++ b/app/views/backend/product_process_phases/show.html.haml
@@ -1,8 +1,7 @@
-=main_toolbar do |t|
-  -t.edit @product_process_phase
-  -t.print_entity @product_process_phase
-  -t.destroy(@product_process_phase, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @product_process_phase.destroyable?
+= main_toolbar do |t|
+  - t.edit @product_process_phase
+  - t.destroy(@product_process_phase, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @product_process_phase.destroyable?
 
-=attributes_list(@product_process_phase) do |l| # liste des champs à afficher
-  -l.attribute :name
-  -l.attribute :nature
+= attributes_list do |l|
+  - l.attribute :name
+  - l.attribute :nature
