--- a/app/views/backend/product_nature_variants/show.html.haml
+++ b/app/views/backend/product_nature_variants/show.html.haml
@@ -20,22 +20,21 @@
     -b.cell(:prices_evolutions) do
       - if resource.prices.count > 0
         :ruby
-          dataset = resource.prices.reorder(:started_at)
-          started_on = dataset.first.started_at.to_date
-          stopped_on = dataset.last.stopped_at.to_date if !dataset.last.stopped_at.nil?
-          stopped_on ||= Date.new(Campaign.currents.reorder(:harvest_year).last.harvest_year,12,31)
-
+            dataset = resource.prices.reorder(:started_at)
+            
             series = []
 
             for usage in [:purchase, :sale, :stock, :cost]
               items = dataset.of_usage(usage)
               item_h = items.sort.inject({}) do |hash, pair|
-                hash[pair.started_at.l(:format => "%b %Y")] = pair.amount.to_d
+                hash[pair.started_at.to_s(:number).first(6)] = pair.amount.to_d
                 hash
               end
-              series << {name: usage.tl ,data: item_h.collect{|k,v| [k.to_s, v.to_s.to_f] } }
+              data = []
+              data = item_h.collect{|k,v| [k.to_s.to_f, v.to_s.to_f] }
+              series << {name: usage.tl ,data: data }
             end
 
-        = spline_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { type: 'datetime', date_time_label_formats: { month: '%b. %Y', year: '%Y' }})
+        = scatter_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, y_axis: {title: { text: :price.tl}}, x_axis: {title: { enabled: true, text: :months.tl}})
       - else
         %strong= :no_data.tl
