--- a/app/views/backend/product_linkages/edit.html.haml
+++ b/app/views/backend/product_linkages/edit.html.haml
@@ -1,8 +1,8 @@
 -# Generated automatically. Remove this line to keep your changes.
-=backend_form_for([:backend, @product_link], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
+=backend_form_for([:backend, @product_linkage], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
   -if params[:redirect]
     =hidden_field_tag(:redirect, params[:redirect])
   .form-fields>=render(:partial => 'form', :locals => {:f => f})
   =form_actions do
     =submit_tag(tl(:update), 'data-disable-with' => tl(:please_wait))
-    =link_to(tl(:cancel), backend_product_link_url(@product_link), (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
+    =link_to(tl(:cancel), backend_product_linkage_url(@product_linkage), (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
