Replaces localize_in with container which work better

--- a/app/views/backend/equipments/show.html.haml
+++ b/app/views/backend/equipments/show.html.haml
@@ -15,3 +15,8 @@
       = list(:intervention_casts)
     - b.cell(:places) do
       = list(:places)
+    - if resource.linkage_points_array.any?
+      - b.cell(:carried_linkages) do
+        = list(:carried_linkages)
+    - b.cell(:carrier_linkages) do
+      = list(:carrier_linkages)
