--- a/app/views/backend/sales/_form.html.haml
+++ b/app/views/backend/sales/_form.html.haml
@@ -8,7 +8,7 @@
 
     - b.cell :sales_conditions do
       = f.association :nature, :as => :hidden
-      = f.referenced_association :responsible, :source => :employees, :new => {:employed => 1}
+      = f.referenced_association :responsible, :source => {scope: {employees_of: Entity.of_company.id}}, :new => {:employed => 1}
       = f.referenced_association :transporter, :source => :transporters
       = f.input :description
 
