Enhances demo data and translates a part of product management

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -716,6 +716,12 @@ form.search {
     .subform-title {
       @include background(transparentize($important-color, 0.4));
       padding: $default-gap;
+      .remove {
+        i {
+          @include is-icon;
+          @include use-icon(remove);
+        }
+      }
     }
     .subform-fields {
       padding-top: $default-gap;
