--- a/app/views/backend/incidents/show.html.haml
+++ b/app/views/backend/incidents/show.html.haml
@@ -5,7 +5,7 @@
   - b.cell do
     = attributes_list(@incident) do |l|
       - l.attribute :name
-      - l.attribute :target, :url => true
+      - l.attribute :target, url: true
 
   - b.tabbox do
     - b.cell(:interventions) do
