--- a/app/views/backend/interventions/show.html.haml
+++ b/app/views/backend/interventions/show.html.haml
@@ -11,9 +11,9 @@
         - l.attribute :started_at
         - l.attribute :stopped_at
         - l.attribute :state
-        - l.attribute :production, :url => true
+        - l.attribute :production, url: true
         - if @intervention.production_support
-          - l.attribute :storage, :url => true
+          - l.attribute :storage, url: true
 
   - b.tabbox do
     - b.cell(:casts) do
