--- a/app/views/backend/plants/show.html.haml
+++ b/app/views/backend/plants/show.html.haml
@@ -9,8 +9,8 @@
     = attributes_list(@plant) do |l| # liste des champs à afficher
       - l.attribute :name
       - l.attribute :born_at
-      - #-l.attribute :variety, :url => true
-      - #-l.attribute :group, :url => true # on affiche l'attribut name de l'entité ProductGroup associé par l'attribut group de l'entité courante Product avec un lien vers ce groupe
+      - #-l.attribute :variety, url: true
+      - #-l.attribute :group, url: true # on affiche l'attribut name de l'entité ProductGroup associé par l'attribut group de l'entité courante Product avec un lien vers ce groupe
       - l.attribute :description
 
   - b.tabbox do
