--- a/app/views/backend/analytic_repartitions/show.html.haml
+++ b/app/views/backend/analytic_repartitions/show.html.haml
@@ -7,4 +7,4 @@
       - l.attribute :affected_on
       - l.attribute :state
       - l.attribute :affectation_percentage
-      - l.attribute :production, :url => true
+      - l.attribute :production, url: true
