--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -53,12 +53,12 @@
     - b.cell :details do
       = attributes_list(@animal) do |l| # liste des champs à afficher
         - l.attribute :name
-        - l.attribute :variety, :url => true
+        - l.attribute :variety, url: true
         - l.attribute :born_at
         - l.attribute :dead_at
         - l.attribute :sex, :through => :indicator_data
-        - l.attribute :mother, :url => true
-        - l.attribute :father, :url => true
+        - l.attribute :mother, url: true
+        - l.attribute :father, url: true
         - l.attribute :identification_number
         - l.attribute :description
     - b.cell :indicators_evolutions do
