--- a/app/views/backend/incoming_delivery_items/_indicator_datum_fields.html.haml
+++ b/app/views/backend/incoming_delivery_items/_indicator_datum_fields.html.haml
@@ -1,1 +1,6 @@
-../products/_indicator_datum_fields.html.haml
+.nested-fields
+  =link_to_remove_nested_association(:indicator_datum, f)
+  =f.input(:measured_at, :wrapper_html => {:id => 'measured_at-field'})
+  =f.input(:indicator, :wrapper_html => {:id => 'indicator-field'})
+  =f.input(:value, :wrapper_html => {:id => 'value-field'})
+  =f.input(:measure_unit, :wrapper_html => {:id => 'measure_unit-field'})
