--- a/app/views/backend/inventories/_form.html.haml
+++ b/app/views/backend/inventories/_form.html.haml
@@ -1,6 +1,6 @@
-=field_set do
-  =f.referenced_association :responsible, :source => :employees
-  =f.input :description
-  =render 'items_form'
+= field_set do
+  = f.referenced_association :responsible, :source => :employees
+  -# = f.input :description
+  = render 'items_form'
 
 
