--- a/app/views/backend/animals/_form.html.haml
+++ b/app/views/backend/animals/_form.html.haml
@@ -1,12 +1,10 @@
 = f.product_form_frame do
-  = field_set :identification do # partie info general de l entité animal
-    = f.input :name # affiche le champ name de l entité animal avec une infos derriere
+  = field_set :identification do
     = f.input :work_number
     = f.input :identification_number
-    = f.input :born_at, :as => :date
     = f.picture
-    = f.input :description # affiche le champ description formaté en zone de texte
+    = f.input :description
 
-  = field_set(:genealogy) do # partie entrée sortie de l entité animal
+  = field_set(:genealogy) do
     = f.referenced_association :mother, :source => :mothers
     = f.referenced_association :father, :source => :fathers
